smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/lists/set-invalid-member.smithy
// Syntax error at line 5, column 3: Expected RBRACE('}') but found IDENTIFIER('foo') | Model
namespace com.foo

set MySet {
  foo: smithy.api#String,
}
